syntax = "proto3";

option go_package = "github.com/davidlux123/gRPC-service/proto";
//option java_multiple_files = true;
//option java_package = "io.grpc.examples.helloworld";
//option java_outer_classname = "HelloWorldProto";

package games;

//service definition.
service IngressGame {
  rpc SendResultGame (GameRequest) returns (GameReply) {}
}

message GameRequest {
  int32 game_id= 1;
  int32 players= 2;
}

message GameReply {
  string response_Game = 1;
}
